<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="releaseDate">Release Date</string>

...
